modified county, subcounty and ward filter on calllogs form

--- a/veoc/templates/veoc/call_register_form.html
+++ b/veoc/templates/veoc/call_register_form.html
@@ -92,7 +92,7 @@
                            <select class="form-control" name="county" id="county" onchange="getsubcounty()">
                                 <option value="" disabled selected>Select County</option>
                                 {% for cnty in county %}
-                                    <option value="{{cnty.organisationunitid}}">{{cnty.name}}</option>
+                                    <option value="{{cnty.name}}">{{cnty.name}}</option>
                                 {% endfor %}
                             </select>
                          </div>
@@ -679,7 +679,7 @@ catch(e){
                  $('#subcounty').html(options);
                  for(var i=0;i<data.length;i++){
 
-                   var options = '<option value="' + data[i].fields['organisationunitid'] + '">' + data[i].fields['name'] + '</option>';
+                   var options = '<option value="' + data[i].fields['name'] + '">' + data[i].fields['name'] + '</option>';
                    $('#subcounty').append(options);
                  }
                },error:function(){
@@ -707,7 +707,7 @@ catch(e){
                  $('#ward').html(options);
                  for(var i=0;i<data.length;i++){
 
-                   var options = '<option value="' + data[i].fields['organisationunitid'] + '">' + data[i].fields['name'] + '</option>';
+                     var options = '<option value="' + data[i].fields['organisationunitid'] + '">' + data[i].fields['name'] + '</option>';
                    $('#ward').append(options);
                  }
                },error:function(){
