changed the login process

--- a/veoc/templates/veoc/call_register_form.html
+++ b/veoc/templates/veoc/call_register_form.html
@@ -300,17 +300,17 @@ catch(e){
 
                 return false;
                }
-               if(inci_stat == "" || inci_stat == null){
-                 bootbox.alert({
-                    size: "small",
-                    title: "Missed data input  : Warning",
-                    message: "Select incident status !!",
-                    callback: function () { /* your callback code */
-                    }
-                });
-                return false;
-
-               }
+               // if(inci_stat == "" || inci_stat == null){
+               //   bootbox.alert({
+               //      size: "small",
+               //      title: "Missed data input  : Warning",
+               //      message: "Select incident status !!",
+               //      callback: function () { /* your callback code */
+               //      }
+               //  });
+               //  return false;
+               //
+               // }
                if(descr == "" || descr==null){
                  bootbox.alert({
                     size: "small",
