--- a/veoc/templates/veoc/events_form.html
+++ b/veoc/templates/veoc/events_form.html
@@ -146,10 +146,10 @@
 
             if (Number(deaths) > Number(cases)) {
                 $('#deathserror').html("Deaths reported should be less than cases");
-                {#            $('#cases').html('1');#}
+                // $('#cases').html('1');
                 document.getElementById("cases").value = "";
                 document.getElementById("deaths").value = "";
-                {#            $('#deaths').html('');#}
+                // $('#deaths').html('');
 
             }
             else {
