--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -274,6 +274,9 @@
                       <a href="/sitreps">SITREPS</a>
                   </li>
                   <li>
+                      <a href="/sops">SOP's</a>
+                  </li>
+                  <li>
                       <a href="/protocol">Outbreak Protocols</a>
                   </li>
                   <li>
