--- a/veoc/templates/veoc/users.html
+++ b/veoc/templates/veoc/users.html
@@ -412,7 +412,7 @@
             $('#usergroup').append(options);
           }
         },error:function(){
-          console.log("in error");
+          console.log("Error getting Groups!");
           var options = '<option value="" selected disabled>Select Group</option>';
           $('#usergroup').html(options);
         }
