--- a/veoc/templates/veoc/unrelated_report.html
+++ b/veoc/templates/veoc/unrelated_report.html
@@ -66,7 +66,7 @@
                                       {% else %}
                                   </tr>
                               {% endif %}
-                              <td>{{ call_log.date_reported }}</td>
+                              <td>{{ call_log.date_reported|date:'d-m-Y' }}</td>
                             <td>{{ call_cat_incident }}</td>
                             <td>{{ call_log.incident_status.status_description }}</td>
                             <td>{{ call_log.reporting_region.region_description }}</td>
@@ -78,7 +78,7 @@
                               <button type="button" class="btn btn-primary btn-xs view_button"
                                 data-toggle="modal" data-target="#view_unrelated_call_modal"
                                 data-id="{{ call_log.pk }}"
-                                data-date="{{ call_log.date_reported }}"
+                                data-date="{{ call_log.date_reported|date:'d-m-Y' }}"
                                 data-status="{{ call_log.incident_status.status_description }}"
                                 data-region="{{ call_log.reporting_region.region_description }}"
                                 data-incident="{{ call_cat_incident }}"
@@ -93,7 +93,7 @@
                             <button type="button" class="btn btn-primary btn-xs edit_button"
                               data-toggle="modal" data-target="#edit_unrelated_call_modal"
                               data-id="{{ call_log.pk }}"
-                              data-date="{{ call_log.date_reported }}"
+                              data-date="{{ call_log.date_reported|date:'d-m-Y' }}"
                               data-status="{{ call_log.incident_status.status_description }}"
                               data-region="{{ call_log.reporting_region.region_description }}"
                               data-incident="{{ call_cat_incident }}"
