--- a/veoc/templates/veoc/reportable_diseases_report.html
+++ b/veoc/templates/veoc/reportable_diseases_report.html
@@ -76,7 +76,7 @@
                           <tbody>
                             <tr>
                           {% for dhis_reported_diseases_report, dhis_case_values in dhis_reported_diseases_reports %}
-                              <td>{{ dhis_reported_diseases_report.eventDate }}</td>
+                              <td>{{ dhis_reported_diseases_report.eventDate|date:'d-m-Y' }}</td>
                               <td>{{ dhis_reported_diseases_report.disease_type.name }}</td>
                               {% if dhis_reported_diseases_report.stored_by == 'eoc_user' %}
                                 <td>EOC System</td>
@@ -95,7 +95,7 @@
                               <button type="button" class="btn btn-primary btn-xs view_button"
                                 data-toggle="modal" data-target="#view_disease_modal"
                                 data-id="{{ dhis_reported_diseases_report.pk }}>"
-                                data-date="{{ dhis_reported_diseases_report.eventDate }}"
+                                data-date="{{ dhis_reported_diseases_report.eventDate|date:'d-m-Y' }}"
                                 data-disease="{{ dhis_reported_diseases_report.disease_type.name }}"
                                 data-source="{{ dhis_reported_diseases_report.stored_by }}"
                                 data-status="{{ dhis_reported_diseases_report.status }}"
