--- a/veoc/templates/veoc/event_view.html
+++ b/veoc/templates/veoc/event_view.html
@@ -14,19 +14,19 @@
                 <div class="well">
                     <div class="form-group">
                         <label for="event_type"><b>Event Type : </b></label>
-                        <label for="event_type">{{ event_instance.event_type.description }}</label>
+                        <label for="event_type">{{ event_instance.event_type.event_description }}</label>
                     </div>
                     <div class="form-group">
                         <label for="event_type"><b>Data source : </b></label>
-                        <label for="event_type">{{ event_instance.data_source.description }} </label>
+                        <label for="event_type">{{ event_instance.data_source.source_description }} </label>
                     </div>
                     <div class="form-group">
                         <label for="event_type"><b>Region : </b></label>
-                        <label for="event_type">{{ event_instance.region.description }} </label>
+                        <label for="event_type">{{ event_instance.reporting_region.region_description }} </label>
                     </div>
                     <div class="form-group">
                         <label for="event_type"><b>Date reported : </b></label>
-                        <label for="event_type">{{ event_instance.date_created }} </label>
+                        <label for="event_type">{{ event_instance.date_reported }} </label>
                     </div>
                     <div class="form-group">
                         <label for="event_type"><b>Remarks : </b></label>
