--- a/veoc/templates/veoc/dashboard.html
+++ b/veoc/templates/veoc/dashboard.html
@@ -50,7 +50,7 @@
                     <div class="icon">
                         <i class="ion ion-bag"></i>
                     </div>
-                    <a href="/disease_reports/" class="btn btn-primary">More infor</a>
+                    <a href="/disease_report/" class="btn btn-primary">More infor</a>
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                    <a href="/call_reports" class="btn btn-primary">More infor</a>
+                    <a href="/call_report" class="btn btn-primary">More infor</a>
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
                     </div>
-                    <a href="/events_reports" class="btn btn-primary">More infor</a>
+                    <a href="/events_report" class="btn btn-primary">More infor</a>
                 </div>
             </div>
         </div>
