--- a/veoc/templates/veoc/disease_view.html
+++ b/veoc/templates/veoc/disease_view.html
@@ -15,15 +15,15 @@
 
                     <div class="form-group">
                         <label for="event_type"><b>Data source : </b></label>
-                        <label for="event_type">{{ disease_instance.data_source.description }} </label>
+                        <label for="event_type">{{ disease_instance.data_source.source_description }} </label>
                     </div>
                     <div class="form-group">
                         <label for="event_type"><b>Region : </b></label>
-                        <label for="event_type">{{ disease_instance.region.description }} </label>
+                        <label for="event_type">{{ disease_instance.reporting_region.region_description }} </label>
                     </div>
                     <div class="form-group">
                         <label for="event_type"><b>Date reported : </b></label>
-                        <label for="event_type">{{ disease_instance.date_created }} </label>
+                        <label for="event_type">{{ disease_instance.date_reported }} </label>
                     </div>
                     <div class="form-group">
                         <label for="event_type"><b>Remarks : </b></label>
