--- a/veoc/templates/veoc/login.html
+++ b/veoc/templates/veoc/login.html
@@ -36,7 +36,9 @@
                 </div> -->
                 <div class="card-body">
                     <h2 class="title">Please sign in</h2>
-                    <form method="POST" action=".?next={{ redirect_to }}"> {% csrf_token %}
+                    <!-- <form id="login_form"> -->
+                    <form class="login_form" method="POST" action=".?next={{ redirect_to }}">
+                        {% csrf_token %}
                         <div class="input-group">
                             <input type="text" name="username" class="form-control input-lg" placeholder="Username">
                         </div>
@@ -51,7 +53,7 @@
             </div>
             <div class="card card-2">
                 <!-- <div class="card-heading"></div> -->
-		<div class="card-body">
+		              <div class="card-body">
                     <form method="POST" action="#">
                         <div class="p-t-20">
                             <button type="button" class="btn btn--radius btn--green" style="display: block; margin: 0 auto;" onClick="location.href='{% url 'veoc:public_document' %}'">View Public Documents</button>
@@ -79,9 +81,55 @@
     <script src="/static/vendor/select2/select2.min.js"></script>
     <script src="/static/vendor/datepicker/moment.min.js"></script>
     <script src="/static/vendor/datepicker/daterangepicker.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
 
     <!-- Main JS-->
     <script src="/static/js/global.js"></script>
+    <script type="text/javascript">
+
+      // $(document).ready(function(e){
+      //   var loginForm = $(".login_form")
+      //
+      //   loginForm.submit(function(e){
+      //     e.preventDefault();
+      //     console.log("inside login_form");
+      //     var thisForm = $(this);
+      //     var endPoint = thisForm.attr("action") || window.location.href;
+      //     var method = thisForm.attr("method");
+      //     var formData = thisForm.serialize();
+      //
+      //     console.log(endPoint);
+      //     console.log(method);
+      //
+      //     $.ajax({
+      //       type:method,
+      //       url:endPoint,
+      //       data: formData,
+      //       success:function(){
+      //         Swal.fire({
+      //           title: 'Success!',
+      //           text: 'Login successfully',
+      //           icon: 'success'
+      //         });
+      //         loginForm[0].reset();
+      //       },
+      //       error:function(er){
+      //         console.log("Login error");
+      //         console.log(er.responseText);
+      //         Swal.fire({
+      //           title: 'Wrong Login credentials!!',
+      //           text: 'Username or Password does NOT exist!!',
+      //           icon: 'error'
+      //         });
+      //       }
+      //     });
+      //
+      //   });
+      //
+      // });
+
+    </script>
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
