--- a/veoc/templates/veoc/subcounty_dashboard.html
+++ b/veoc/templates/veoc/subcounty_dashboard.html
@@ -51,7 +51,7 @@
                     <div class="icon">
                         <i class="ion ion-bag"></i>
                     </div>
-                    <a href="/disease_reports/" class="btn btn-primary">More infor</a>
+                    <a href="/disease_report/" class="btn btn-primary">More infor</a>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                    <a href="/call_reports" class="btn btn-primary">More infor</a>
+                    <a href="/call_report" class="btn btn-primary">More infor</a>
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
                     </div>
-                    <a href="/events_reports" class="btn btn-primary">More infor</a>
+                    <a href="/events_report" class="btn btn-primary">More infor</a>
                 </div>
             </div>
         </div>
