--- a/veoc/templates/veoc/events_form.html
+++ b/veoc/templates/veoc/events_form.html
@@ -13,117 +13,117 @@
         <div class="padding-md">
           <div class="row">
             <div class="col-md-12">
-                  <form onsubmit="return validateform()" method="POST" action="{% url 'veoc:event_register' %}">
-                    {% csrf_token %}
-                    <div class="form-row">
-                       <div class="form-group col-md-12">
-                         <label for="disease_type">Event Type</label>
-                         <select class="form-control" id="eventType" name="eventType" required>
-                                <option value="" disabled selected>Select Event option</option>
-                                {% for dt in events %}
-                                    <option value="{{ dt.name }}">{{ dt.name }}</option>
+                <form class="capture_events_form" method="POST" action="{% url 'veoc:event_register' %}">
+                  {% csrf_token %}
+                  <div class="form-row">
+                     <div class="form-group col-md-12">
+                       <label for="disease_type">Event Type</label>
+                       <select class="form-control" id="eventType" name="eventType" required>
+                              <option value="" disabled selected>Select Event option</option>
+                              {% for dt in events %}
+                                  <option value="{{ dt.name }}">{{ dt.name }}</option>
+                              {% endfor %}
+                          </select>
+                     </div>
+                  </div>
+                   <div class="form-row">
+                       <div class="form-group col-md-6">
+                         <label for="region">Reporting Region</label>
+                         <select class="form-control" name="region" id="region" onchange="region_filter()" required>
+                              <option value="" disabled selected>Select Region</option>
+                              {% for reg in regions %}
+                                  <option value="{{reg.region_description}}">{{reg.region_description}}</option>
+                              {% endfor %}
+                          </select>
+                       </div>
+                       <div class="form-group col-md-6">
+                         <label for="data_source">Data Source</label>
+                         <select class="form-control" id="dataSource" name="dataSource" required>
+                                <option value="" disabled selected>Select Data Source</option>
+                                {% for ds in datasource %}
+                                    <option value="{{ ds.source_description }}">{{ ds.source_description }}</option>
                                 {% endfor %}
                             </select>
                        </div>
-                    </div>
-                     <div class="form-row">
-                         <div class="form-group col-md-6">
-                           <label for="region">Reporting Region</label>
-                           <select class="form-control" name="region" id="region" onchange="region_filter()" required>
-                                <option value="" disabled selected>Select Region</option>
-                                {% for reg in regions %}
-                                    <option value="{{reg.region_description}}">{{reg.region_description}}</option>
-                                {% endfor %}
-                            </select>
-                         </div>
-                         <div class="form-group col-md-6">
-                           <label for="data_source">Data Source</label>
-                           <select class="form-control" id="dataSource" name="dataSource" required>
-                                  <option value="" disabled selected>Select Data Source</option>
-                                  {% for ds in datasource %}
-                                      <option value="{{ ds.source_description }}">{{ ds.source_description }}</option>
-                                  {% endfor %}
-                              </select>
-                         </div>
+                   </div>
+                   <div class="form-row" id="county_div" style="display: none;">
+                       <div class="form-group col-md-4">
+                         <label for="county">County</label>
+                         <select class="form-control" name="county" id="county" onchange="getsubcounty()" >
+                              <option value="" disabled selected>Select County</option>
+                              {% for cty in county %}
+                                  <option value="{{cty.name}}">{{cty.name}}</option>
+                              {% endfor %}
+                          </select>
+                       </div>
+                       <div class="form-group col-md-4">
+                         <label for="subcounty">Subcounty</label>
+                         <select class="form-control" name="subcounty" id="subcounty" onchange="getward()">
+                              <option value="" disabled selected>Select sub-county</option>
+                          </select>
+                       </div>
+                       <div class="form-group col-md-4">
+                         <label for="ward">Ward</label>
+                         <select class="form-control" name="ward" id="ward" >
+                              <option value="" disabled selected>Select Ward</option>
+                          </select>
+                      </div>
+                   </div>
+                   <div class="form-row">
+                       <div class="form-group col-md-6">
+                         <label for="status">Incident Status</label>
+                         <select class="form-control" name="status" id="status" required>
+                              <option value="" disabled selected>Select Status</option>
+                              {% for stat in incident_status %}
+                                  <option value="{{stat.status_description}}">{{stat.status_description}}</option>
+                              {% endfor %}
+                          </select>
+                       </div>
+                       <div class="form-group col-md-6">
+                         <label for="datereport">Date Reported</label>
+                         <input class="form-control" type="date" value="{{ day }}" id="dateReported" max='2000-13-13' name="dateReported" required>
+                       </div>
+                   </div>
+                   <div class="form-row">
+                      <div class="form-group col-md-6">
+                        <label for="cases">Number of Cases</label>
+                        <input type="number" min="0" class="form-control" id="cases" name="cases" placeholder="Cases" required>
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label for="callernumber">Casualty (Deaths)</label>
+                        <input type="number" min="0" class="form-control" id="deaths" name="deaths" onfocusout="checkCases()" placeholder="Deaths" required >
+                      </div>
+                   </div>
+                   <div class="form-row">
+                     <div class="form-group col-md-12">
+                       <label for="description">Description/ Remarks</label>
+                       <textarea class="form-control" id="description" rows="3" name="description" required placeholder="Enter description"></textarea>
                      </div>
-                     <div class="form-row" id="county_div" style="display: none;">
-                         <div class="form-group col-md-4">
-                           <label for="county">County</label>
-                           <select class="form-control" name="county" id="county" onchange="getsubcounty()" >
-                                <option value="" disabled selected>Select County</option>
-                                {% for cty in county %}
-                                    <option value="{{cty.name}}">{{cty.name}}</option>
-                                {% endfor %}
-                            </select>
-                         </div>
-                         <div class="form-group col-md-4">
-                           <label for="subcounty">Subcounty</label>
-                           <select class="form-control" name="subcounty" id="subcounty" onchange="getward()">
-                                <option value="" disabled selected>Select sub-county</option>
-                            </select>
-                         </div>
-                         <div class="form-group col-md-4">
-                           <label for="ward">Ward</label>
-                           <select class="form-control" name="ward" id="ward" >
-                                <option value="" disabled selected>Select Ward</option>
-                            </select>
-                        </div>
+                   </div>
+                   <div class="form-row">
+                     <div class="form-group col-md-12">
+                       <label for="action">Action Taken</label>
+                       <textarea class="form-control" id="actionTaken" rows="3" name="actionTaken" placeholder="Enter action taken"></textarea>
                      </div>
-                     <div class="form-row">
-                         <div class="form-group col-md-6">
-                           <label for="status">Incident Status</label>
-                           <select class="form-control" name="status" id="status" required>
-                                <option value="" disabled selected>Select Status</option>
-                                {% for stat in incident_status %}
-                                    <option value="{{stat.status_description}}">{{stat.status_description}}</option>
-                                {% endfor %}
-                            </select>
-                         </div>
-                         <div class="form-group col-md-6">
-                           <label for="datereport">Date Reported</label>
-                           <input class="form-control" type="date" value="{{ day }}" id="dateReported" max='2000-13-13' name="dateReported" required>
-                         </div>
-                     </div>
-                     <div class="form-row">
-                        <div class="form-group col-md-6">
-                          <label for="cases">Number of Cases</label>
-                          <input type="number" min="0" class="form-control" id="cases" name="cases" placeholder="Cases" required>
-                        </div>
-                        <div class="form-group col-md-6">
-                          <label for="callernumber">Casualty (Deaths)</label>
-                          <input type="number" min="0" class="form-control" id="deaths" name="deaths" onfocusout="checkCases()" placeholder="Deaths" required >
-                        </div>
-                     </div>
-                     <div class="form-row">
-                       <div class="form-group col-md-12">
-                         <label for="description">Description/ Remarks</label>
-                         <textarea class="form-control" id="description" rows="3" name="description" required placeholder="Enter description"></textarea>
+                   </div>
+                   <div class="form-row">
+                     <div class="form-group col-md-12">
+                       <div class="form-check">
+                         <label class="form-check-label" for="diseasesignificant">
+                           Significant Event?
+                         </label>
+                         <input class="form-check-input" type="checkbox" id="callSignificant" name="callSignificant">
                        </div>
                      </div>
-                     <div class="form-row">
-                       <div class="form-group col-md-12">
-                         <label for="action">Action Taken</label>
-                         <textarea class="form-control" id="actionTaken" rows="3" name="actionTaken" placeholder="Enter action taken"></textarea>
-                       </div>
+                   </div>
+                   <div class="form-row">
+                     <div class="form-group col-md-12">
+                       <button type="submit" class="btn btn-primary">Save</button>
                      </div>
-                     <div class="form-row">
-                       <div class="form-group col-md-12">
-                         <div class="form-check">
-                           <label class="form-check-label" for="diseasesignificant">
-                             Significant Event?
-                           </label>
-                           <input class="form-check-input" type="checkbox" id="callSignificant" name="callSignificant">
-                         </div>
-                       </div>
-                     </div>
-                     <div class="form-row">
-                       <div class="form-group col-md-12">
-                         <button type="submit" class="btn btn-primary">Save</button>
-                       </div>
-                     </div>
-                  </form>
-                </div>
-        			</div><!-- /row-->
+                   </div>
+                </form>
+              </div>
+      			</div><!-- /row-->
         </div><!-- /.padding-md -->
       </div><!-- /main-container -->
 
@@ -135,10 +135,11 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
 
     <script>
 
-        window.onload = formFeedback;
         function checkCases() {
 
             var cases = $('#cases').val();
@@ -156,29 +157,45 @@
                 $('#deathserror').html("");
 
             }
-        }
-        function formFeedback() {
+        }        
 
-            var x = "{{success}}";
-            if (x == "") {
-                bootbox.alert({
-                    size: "small",
-                    title: "Event Action  : Error",
-                    message: x,
-                    callback: function () { /* your callback code */
-                    }
+        $(document).ready(function(e){
+          var eventsForm = $(".capture_events_form")
+
+          eventsForm.submit(function(e){
+            e.preventDefault();
+            console.log("inside event_form");
+            var thisForm = $(this);
+            var endPoint = thisForm.attr("action") || window.location.href;
+            var method = thisForm.attr("method");
+            var formData = thisForm.serialize();
+
+            $.ajax({
+              type:method,
+              url:endPoint,
+              data: formData,
+              success:function(){
+                Swal.fire({
+                  title: 'Success!',
+                  text: 'Event Details Saved',
+                  icon: 'success'
                 });
-            }
-            else {
-                bootbox.alert({
-                    size: "small",
-                    title: "Event Action",
-                    message: x,
-                    callback: function () { /* your callback code */
-                    }
+                eventsForm[0].reset();
+              },
+              error:function(er){
+                console.log("Event saving error");
+                console.log(er.responseText);
+                Swal.fire({
+                  title: 'Error!',
+                  text: 'Event Details Cannot be Saved',
+                  icon: 'error'
                 });
-            }
-        }
+              }
+            });
+
+          });
+
+        });
 
         $(function () {
             $("#date_created").datepicker();
@@ -193,51 +210,6 @@
            }else{
              _county.style.display = 'none';
            }
-        }
-
-        function validateform(){
-          var reporing_reg = document.getElementById('region').value;
-
-          if(reporing_reg == "Kenya"){
-            //check if county details are selected
-            var cnty = document.getElementById('county').value;
-            var subcnty = document.getElementById('subcounty').value;
-            var wrd = document.getElementById('ward').value;
-
-            if(cnty == "" || cnty==null){
-              bootbox.alert({
-                 size: "small",
-                 title: "Missed data input  : Warning",
-                 message: "Select reported county!!",
-                 callback: function () { /* your callback code */
-                 }
-             });
-
-             return false;
-            }
-            if(subcnty == "" || subcnty==null){
-              bootbox.alert({
-                 size: "small",
-                 title: "Missed data input  : Warning",
-                 message: "Select reported  sub county !!",
-                 callback: function () { /* your callback code */
-                 }
-             });
-
-             return false;
-            }
-            if(wrd == "" || wrd==null){
-              bootbox.alert({
-                 size: "small",
-                 title: "Missed data input  : Warning",
-                 message: "Select reported ward !!",
-                 callback: function () { /* your callback code */
-                 }
-             });
-
-             return false;
-            }
-          }//reporting kenya
         }
 
         function getsubcounty(){
