saving loader of forms

--- a/veoc/templates/veoc/disease_form.html
+++ b/veoc/templates/veoc/disease_form.html
@@ -171,6 +171,13 @@
             var method = thisForm.attr("method");
             var formData = thisForm.serialize();
 
+            Swal.fire({
+              title: "Saving Details...",
+              text: "Please wait",
+              imageUrl: "/static/images/ajax-loader.gif",
+              showConfirmButton: false,
+              allowOutsideClick: false
+            });
             $.ajax({
               type:method,
               url:endPoint,
