added logo on the system

--- a/veoc/templates/veoc/call_register_form.html
+++ b/veoc/templates/veoc/call_register_form.html
@@ -213,8 +213,8 @@
         var formData = thisForm.serialize();
 
         Swal.fire({
-          title: "Saving Details...",
-          text: "Please wait",
+          title: "Please wait!,Saving Details!",
+          // text: "Please wait",
           imageUrl: "/static/images/ajax-loader.gif",
           showConfirmButton: false,
           allowOutsideClick: false
